@@ -3,6 +3,8 @@
 	* Set version to 1.3.0-dev
 	* Cleanup: Remove structures that depent on specific TYPO3 versions
 	* Cleanup: Set requirement to TYPO3 4.3.0
+!!!	* Cleanup: Removed memcached features - use a proper MySQL query cache instead
+	* Added feature: Integrated assure configurations for using write/master database
 
 2009-06-15  Oliver Hader  <oliver@typo3.org>
 
